# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  main.py  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  parse.py  repo.py  tools.py
page_analyzer/templates/: index.html  layout.html  new.html  show.html
